Fix link so it covers article

--- a/src/styles/_media.scss
+++ b/src/styles/_media.scss
@@ -1,5 +1,5 @@
 /* Medium Devices, Desktops */
-@media only screen and (max-width : 992px) {
+@media only screen and (max-width: 992px) {
   .post {
     width: 48%;
     max-width: 100%;
@@ -12,18 +12,16 @@
 
     .post-content {
       width: 100%;
+      font-size: 18px;
       .post-title {
         margin: 0 0 5px;
-        a {
-          font-size: 21px;
-        }
       }
     }
   }
 }
 
 /* Small Devices, Tablets */
-@media only screen and (max-width : 768px) {
+@media only screen and (max-width: 768px) {
   .sidebar {
     position: relative;
     display: flex;
@@ -32,12 +30,11 @@
     width: 100%;
     padding: 10px;
     background-color: #ffffff;
-    box-shadow: 0 1px 1px 0 rgba(31, 35, 46, .15);
+    box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
 
     footer {
       margin-bottom: 10px;
     }
-
   }
   .about {
     text-align: center;
@@ -49,7 +46,7 @@
       border-radius: 100%;
       margin-bottom: 10px;
     }
-}
+  }
 
   .content-box {
     padding: 20px 10px;
@@ -59,17 +56,18 @@
     align-items: stretch;
   }
 
-.contact-title, .copyright {
-  display: none;
-}
-
+  .contact-title,
+  .copyright {
+    display: none;
+  }
 }
 
 /* Extra Small Devices, Phones */
-@media only screen and (max-width : 480px) {
+@media only screen and (max-width: 480px) {
   .content-box {
     padding: 10px;
   }
+
   .post {
     width: 98%;
     max-width: 100%;
@@ -82,11 +80,9 @@
 
     .post-content {
       width: 100%;
+      font-size: 21px;
       .post-title {
         margin: 0 0 5px;
-        a {
-          font-size: 21px;
-        }
       }
     }
   }
