--- a/src/styles/parts/_home-page.scss
+++ b/src/styles/parts/_home-page.scss
@@ -28,7 +28,7 @@
     border-radius: 50%;
     transition: transform 0.35s;
     &:hover {
-      transform: scale3d(0.90,0.90,1);
+      transform: scale3d(0.9, 0.9, 1);
     }
   }
   .author-name {
@@ -41,7 +41,7 @@
     color: $dark;
     font-weight: 700;
     &::after {
-      content: "";
+      content: '';
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
@@ -78,7 +78,7 @@
     text-transform: uppercase;
     text-align: center;
     &::before {
-      content: "";
+      content: '';
       display: block;
       height: 2px;
       width: calc(50% - 48px);
@@ -89,7 +89,7 @@
       background-color: $body-color;
     }
     &::after {
-      content: "";
+      content: '';
       display: block;
       height: 2px;
       width: calc(50% - 48px);
@@ -144,11 +144,12 @@ footer {
   min-height: 11rem;
   border-radius: 10px;
   overflow: hidden;
-  transition: all .3s ease;
-  box-shadow: 0 1px 1px 0 rgba(31, 35, 46, .15);
+  transition: all 0.3s ease;
+  box-shadow: 0 1px 1px 0 rgba(31, 35, 46, 0.15);
+
   &:hover {
     transform: translate(0px, -2px);
-    box-shadow: 0 15px 45px -10px rgba(10, 16, 34, .2);
+    box-shadow: 0 15px 45px -10px rgba(10, 16, 34, 0.2);
   }
 
   .post-thumbnail {
@@ -160,6 +161,9 @@ footer {
   }
 
   .post-content {
+    font-family: 'PT Serif', serif;
+    text-decoration: none;
+    color: $dark-blue;
     padding: 1rem;
     width: 70%;
     .post-date,
@@ -170,11 +174,6 @@ footer {
       margin: 0 0 10px;
       font-size: 30px;
       font-weight: 400;
-      a {
-        font-family: 'PT Serif', serif;
-        text-decoration: none;
-        color: $dark-blue;
-      }
     }
     p {
       margin-top: 0;
@@ -182,11 +181,12 @@ footer {
   }
 }
 
-a.older-posts, a.newer-posts {
+a.older-posts,
+a.newer-posts {
   font-size: 18px;
   display: inline-block;
   color: $body-color;
-  transition: transform .2s;
+  transition: transform 0.2s;
 }
 
 a.older-posts:hover {
